<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnexionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/blue_gradient"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/descr_btn_retour"
            android:onClick="clickBack"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickBack"
            android:text="@string/text_retour"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_connexion"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_entrez_votre_email_et_votre_mot_de_passe_afin_de_vous_connecter" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:focusable="true"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey_WCAG_RGAA" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:focusable="true"
            android:hint="@string/text_mot_de_passe"
            android:inputType="textPassword"
            android:textColorHint="@color/grey_WCAG_RGAA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/text_mot_de_passe_oublie"
            android:textColor="@color/linkBlue"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            android:onClick="clickLogin"
            android:padding="15dp"
            android:text="@string/text_se_connecter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_ou_connectez_vous_avec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/descr_connexion_avec_google"
                android:src="@drawable/google_logo" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/descr_connexion_avec_facebook"
                android:src="@drawable/facebook_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQUESTION_vous_n_avez_pas_de_compte" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="clickRegister"
                android:text="@string/text_inscrivez_vous"
                android:textColor="@color/linkBlue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>