<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/blue_gradient">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:focusable="true"
            android:labelFor="@+id/textview_retour"
            android:contentDescription="@string/descr_btn_retour"
            android:onClick="clickBack"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@null"/>
        <TextView
            android:id="@+id/textview_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_retour"
            android:onClick="clickBack"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/text_s_inscrire"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_creez_un_compte_et_continuez"/>
        <EditText
            android:id="@+id/etNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:textColorHint="@color/grey_WCAG_RGAA"
            android:hint="@string/text_nom"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/etPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:textColorHint="@color/grey_WCAG_RGAA"
            android:hint="@string/text_prenom"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:textColorHint="@color/grey_WCAG_RGAA"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:textColorHint="@color/grey_WCAG_RGAA"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/text_mot_de_passe"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:backgroundTint="@color/orange"
            android:text="@string/text_s_inscrire"
            android:onClick="clickRegister"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_ou_inscrivez_vous_avec"
            android:layout_gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/descr_inscription_avec_google"
                android:src="@drawable/google_logo"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/descr_inscription_avec_facebook"
                android:src="@drawable/facebook_logo"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQUESTION_vous_possedez_deja_un_compte"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/linkBlue"
                android:textStyle="bold"
                android:text="@string/text_connectez_vous"
                android:onClick="clickLogin"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>